--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
       property="og:description"
       content="Conoce el perfil profesional de Kathering Rivera, desarrolladora web y diseñadora UX/UI."
     />
-    <!-- <meta property="og:image" content="https://tudominio.com/preview-cv.png" /> -->
-    <!-- <meta property="og:url" content="https://tudominio.com/cv" /> -->
+    <meta property="og:image" content="https://kattrr.github.io/cv-kathering-rivera/preview-cv.png" />
+    <meta property="og:url" content="https://kattrr.github.io/cv-kathering-rivera/" />
     <meta property="og:type" content="website" />
 
     <!-- 🖼️ Twitter Card (opcional) -->
@@ -32,7 +32,7 @@
       name="twitter:description"
       content="Desarrolladora Web & UX/UI. Graduada con excelencia académica y enfoque en experiencias digitales intuitivas."
     />
-    <!-- <meta name="twitter:image" content="https://tudominio.com/preview-cv.png" /> -->
+    <meta name="twitter:image" content="https://kattrr.github.io/cv-kathering-rivera/preview-cv.png" />
 
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
 
